[package]
name = "quicktoken"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
solana-program = "=1.14.9"
thiserror = "1.0.37"
spl-token = { version="3.5.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="1.4.2", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="1.1.1", features = [ "no-entrypoint" ] }


[lib]
crate-type = ["cdylib", "lib"]

[dependencies.num-derive]
version = "0.3.3"

[dependencies.num-traits]
version = "0.2.15"